applications/production/authentik/authentik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sso.zech.dev`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
    - match: HostRegexp(`{host:.+}`) && PathPrefix(`/outpost.goauthentik.io`)
      kind: Rule
      services:
        - name: authentik-server
          port: 9000
